@@ -1,3 +1,6 @@
+2003-01-10 Vaclav Haisman <V.Haisman@sh.cvut.cz>
+	* lexan.cxx, lexan.hxx, csynan.y: Korekce interakce lexer-parser.
+
 2003-01-09 Vaclav Haisman <V.Haisman@sh.cvut.cz>
 	* ast.cxx, ast.hxx: Korekce, nova trida.
 	* csynan.y: Komplet implementace semantickych akci.
